# AAA

./: .gitignore  index.html  package-lock.json  package.json  requirements.txt  vercel.json
.claude/: settings.local.json
api/: index.py
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml  smweb.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_ai_interview.py  0003_ai_interview_scope.py  0004_profiles_user_required.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: ai_interview.py  auth.py  charts.py  profiles.py  reports.py  tarot.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai_interview.py  chart.py  content.py  daily.py  profile.py  report.py  user.py
backend/app/schemas/: ai_interview.py  auth.py  chart.py  common.py  profile.py  report.py  tarot.py
backend/app/services/: bazi_interview.py  deepseek_client.py  ephemeris.py  geocoding.py  report_builder.py  tarot_reading.py  time_normalization.py
backend/smweb_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.css  App.jsx  index.css
src/calculations/: useAstrology.js
src/components/: AIInterviewPanel.jsx
src/context/: AuthContext.jsx  ProfileContext.jsx  ProfileContextValue.js  useAuth.js  useProfile.js
src/knowledge/: readingKnowledge.js
src/pages/: AdminUsers.jsx  Bazi.jsx  Home.jsx  Login.jsx  Profile.jsx  Tarot.jsx  Vedic.jsx  Ziwei.jsx  Zodiac.jsx
src/services/: aiInterviewApi.js  api.js  authApi.js  (+4 more)
(+28 files in other folders)
